kafka: implementes sasl scram

--- a/incubator/kafka/requirements.yaml
+++ b/incubator/kafka/requirements.yaml
@@ -1,6 +1,6 @@
 dependencies:
 - name: zookeeper
-  version: 0.5.0
-  repository: https://kubernetes-charts-incubator.storage.googleapis.com/
+  version: 0.7.0
+  repository: file://../zookeeper/
   condition: zookeeper.enabled
 
