--- a/incubator/kafka/templates/statefulset.yaml
+++ b/incubator/kafka/templates/statefulset.yaml
@@ -22,9 +22,9 @@ spec:
 {{- if .Values.schedulerName }}
       schedulerName: "{{ .Values.schedulerName }}"
 {{- end }}
+      initContainers:
     {{- if .Values.external.enabled }}
       ## ref: https://github.com/Yolean/kubernetes-kafka/blob/master/kafka/50kafka.yml
-      initContainers:
       - name: init-ext
         image: "{{ .Values.external.init.image }}:{{ .Values.external.init.imageTag }}"
         imagePullPolicy: "{{ .Values.external.init.imagePullPolicy }}"
@@ -32,6 +32,25 @@ spec:
           - sh
           - -euxc
           - "kubectl label pods ${POD_NAME} --namespace ${POD_NAMESPACE} pod=${POD_NAME}"
+        env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+    {{- end }}
+    {{- if .Values.sasl.scram.enabled }}
+      ## ref: https://github.com/Yolean/kubernetes-kafka/blob/master/kafka/50kafka.yml
+      - name: init-sasl
+        image: "{{ .Values.sasl.scram.init.image }}:{{ .Values.sasl.scram.init.imageTag }}"
+        imagePullPolicy: "{{ .Values.sasl.scram.init.imagePullPolicy }}"
+        command:
+          - sh
+          - -euxc
+          - 'kafka-configs --zookeeper {{ include "zookeeper.url" . }} --alter --add-config "SCRAM-SHA-256=[password=admin-secret],SCRAM-SHA-512=[password=admin-secret]" --entity-type users --entity-name admin && echo $?'
         env:
           - name: POD_NAME
             valueFrom:
@@ -103,6 +122,17 @@ spec:
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: {{ include "zookeeper.url" . | quote }}
         {{- end }}
+        {{- if .Values.sasl.scram.enabled }}
+        - name: KAFKA_SASL_ENABLED_MECHANISMS
+          # TODO Paramaterize encryption length
+          value: SCRAM-SHA-256
+        - name: KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL
+          # TODO Paramaterize encryption length
+          value: SCRAM-SHA-256
+        - name: KAFKA_SECURITY_INTER_BROKER_PROTOCOL
+          # TODO Paramaterize
+          value: SASL_PLAINTEXT
+        {{- end }}
         {{- if not (hasKey .Values.configurationOverrides "log.dirs") }}
         - name: KAFKA_LOG_DIRS
           value: {{ printf "%s/%s" .Values.persistence.mountPath .Values.logSubPath | quote }}
@@ -114,6 +144,10 @@ spec:
         {{- if .Values.jmxPort }}
         - name: KAFKA_JMX_PORT
           value: "{{ .Values.jmxPort }}"
+        {{- end }}
+        {{- if .Values.kafkaOpts }}
+        - name: KAFKA_OPTS
+          value: "{{ .Values.kafkaOpts }}"
         {{- end }}
         # This is required because the Downward API does not yet support identification of
         # pod numbering in statefulsets. Thus, we are required to specify a command which
@@ -129,10 +163,20 @@ spec:
         volumeMounts:
         - name: datadir
           mountPath: {{ .Values.persistence.mountPath | quote }}
-      {{- if not .Values.persistence.enabled }}
+        {{- if .Values.sasl.scram.enabled }}
+        - name: jaasconfig
+          #TODO params for jaas path
+          mountPath: "/etc/kafka"
+        {{- end }}
       volumes:
+      {{- if not .Values.persistence.enabled }}
       - name: datadir
         emptyDir: {}
+      {{- end }}
+      {{- if .Values.sasl.scram.enabled }}
+      - name: jaasconfig
+        configmap:
+          name: {{ template "kafka.fullname" . }}
       {{- end }}
   {{- if .Values.persistence.enabled }}
   volumeClaimTemplates:
