Many changes - Tests work!
- Forwarded ports in kafka services
- Fixed typos (configmap -> configMap)
- Added client configs to jaas for tests
- Made tests able to be repeated
- Changed where jaas is mounted to avoid clobbering clint kafka configs
- Revert requirements.lock and requirements.yaml

--- a/incubator/kafka/templates/config-map.yaml
+++ b/incubator/kafka/templates/config-map.yaml
@@ -12,15 +12,26 @@ metadata:
   {{/* - range $i, $e := until (int .Values.replicas) */}}
 data:
   kafka_server_jaas.conf: |-
+    // Info for Kafka to speak to other Kafkas
     KafkaServer {
         org.apache.kafka.common.security.scram.ScramLoginModule required
         username="admin"
         password="admin-secret";
     };
+
+    // Info for Kafka to connect to Zookeeper
     Client {
         org.apache.kafka.common.security.scram.ScramLoginModule required
         username="super"
         password="adminsecret";
+    };
+
+    // Info for third-party clients to connect to Kafka
+    // (This is currently only used for the tests)
+    KafkaClient {
+        org.apache.kafka.common.security.scram.ScramLoginModule required
+        username="admin"
+        password="admin-secret";
     };
 
   {{/* - end */}}
