--- a/incubator/kafka/templates/statefulset.yaml
+++ b/incubator/kafka/templates/statefulset.yaml
@@ -50,16 +50,21 @@ spec:
         command:
           - sh
           - -euxc
-          - 'kafka-configs --zookeeper {{ include "zookeeper.url" . }} --alter --add-config "SCRAM-SHA-256=[password=admin-secret],SCRAM-SHA-512=[password=admin-secret]" --entity-type users --entity-name admin && echo $?'
+          - |
+            kafka-configs --zookeeper {{ include "zookeeper.url" . }} --alter --add-config "SCRAM-SHA-256=[password=$SCRAM_ADMIN_PASSWORD],SCRAM-SHA-512=[password=$SCRAM_ADMIN_PASSWORD]" --entity-type users --entity-name admin && \
+            sed "s/\$SCRAM_ADMIN_PASSWORD/${SCRAM_ADMIN_PASSWORD}/g" /tmp/kafka-template/kafka_server_jaas.conf > /etc/kafka-config/kafka_server_jaas.conf
         env:
-          - name: POD_NAME
+          - name: SCRAM_ADMIN_PASSWORD
             valueFrom:
-              fieldRef:
-                fieldPath: metadata.name
-          - name: POD_NAMESPACE
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.namespace
+              secretKeyRef:
+                name: {{ template "kafka.fullname" . }}-sasl-scram-secret
+                key: scram-admin-password
+        volumeMounts:
+        - name: jaastemplate
+          mountPath: "/tmp/kafka-template"
+        - name: jaasconfig
+          #TODO params for jaas path
+          mountPath: "/etc/kafka-config"
     {{- end }}
 {{- if .Values.tolerations }}
       tolerations:
@@ -122,17 +127,6 @@ spec:
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: {{ include "zookeeper.url" . | quote }}
         {{- end }}
-        {{- if .Values.sasl.scram.enabled }}
-        - name: KAFKA_SASL_ENABLED_MECHANISMS
-          # TODO Paramaterize encryption length
-          value: SCRAM-SHA-256
-        - name: KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL
-          # TODO Paramaterize encryption length
-          value: SCRAM-SHA-256
-        - name: KAFKA_SECURITY_INTER_BROKER_PROTOCOL
-          # TODO Paramaterize
-          value: SASL_PLAINTEXT
-        {{- end }}
         {{- if not (hasKey .Values.configurationOverrides "log.dirs") }}
         - name: KAFKA_LOG_DIRS
           value: {{ printf "%s/%s" .Values.persistence.mountPath .Values.logSubPath | quote }}
@@ -175,6 +169,8 @@ spec:
       {{- end }}
       {{- if .Values.sasl.scram.enabled }}
       - name: jaasconfig
+        emptyDir: { medium: "Memory" }
+      - name: jaastemplate
         configMap:
           name: {{ template "kafka.fullname" . }}
       {{- end }}
