--- a/incubator/kafka/values.yaml
+++ b/incubator/kafka/values.yaml
@@ -89,8 +89,15 @@ external:
 ##
 configurationOverrides:
   "offsets.topic.replication.factor": 3
+  "inter.broker.protocol": "PLAINTEXT"  # Must be one of the enabled SASL mechanisms, or PLAINTEXT.
   # "auto.leader.rebalance.enable": true
   # "auto.create.topics.enable": true
+
+  # If you're enabling sasl, you'll need to set these properties.
+  # https://docs.confluent.io/current/kafka/authentication_sasl_scram.html#configuration
+  # "sasl.enabled.mechanisms": "SCRAM-SHA-512"
+  # "sasl.mechanism.inter.broker.protocol": "SCRAM-SHA-512"
+  # "security.inter.broker.protocol": "SASL_PLAINTEXT"  # For secure connection between brokers.
 
   ## Options required for external access via NodePort
   ## ref:
@@ -109,6 +116,7 @@ configurationOverrides:
 ## Additional Java arguments to pass to Kafka.
 # kafkaOpts: -Dfoo=bar
 
+
 # Options for enabling SASL for kafka brokers
 sasl:
   scram:
@@ -117,6 +125,10 @@ sasl:
       image: "confluentinc/cp-kafka"
       imageTag: "4.0.0"
       imagePullPolicy: "IfNotPresent"
+
+    ## predefined value for admin password that kafka will use for itself.
+    ## Will use a generated random alpha numeric if not provided
+    # adminPassword: key
 
 ## A collection of additional ports to expose on brokers (formatted as normal containerPort yaml)
 # Useful when the image exposes metrics (like prometheus, etc.) through a javaagent instead of a sidecar
